--- a/_includes/top.html
+++ b/_includes/top.html
@@ -15,6 +15,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li id="nav-slipstream"><a href="/products/slipstream.html">SlipStream</a><span></span></li>
         <li id="nav-nuvlabox"><a href="/products/nuvlabox.html">NuvlaBox</a><span></span></li>
+        <li id="nav-jobs"><a href="/jobs/index.html">Jobs</a><span></span></li>
         <li id="nav-personae"><a href="/personae/index.html">Our Users</a><span></span></li>
         <li id="nav-customers"><a href="/customers/index.html">Customers</a><span></span></li>
         <li><a href="http://support.sixsq.com">Support</a><span></span></li>
