Change 45 degree message

--- a/_includes/slipstream_intro.html
+++ b/_includes/slipstream_intro.html
@@ -1,6 +1,6 @@
 <div class="banner">
   <div>
-    <a href="/contact.html">Partners Wanted</a>
+    <a href="/jobs/index.html">We're hiring!</a>
   </div>
 </div>
 <div class="jumbotron top_product slipstream">
