--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -7,7 +7,7 @@
 
         {% include top.html %}
 
-          <div class="banner"><div><a href="/contact.html">Partners Wanted</a></div></div>
+          <div class="banner"><div><a href="/jobs/index.html">We're hiring!</a></div></div>
 
             <!-- Main jumbotron for a primary marketing message or call to action -->
           <div class="jumbotron">
