General update, preparing for HubSpot integration

--- a/_includes/media_nav.html
+++ b/_includes/media_nav.html
@@ -12,8 +12,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li id="sub_news"><a href="/news/index.html">News</a></li>
         <li id="sub_videos"><a href="/videos/index.html">Videos</a></li>
-        <li id="sub_blog"><a href="/blog/index.html">Blog</a></li>
-        <li id="sub_whitepaper"><a href="/whitepapers/index.html">White Papers</a></li>
+        <li id="sub_eguide"><a href="/eguides/index.html">eGuides</a></li>
       </ul>
     </div>
   </div>
