--- a/_includes/top.html
+++ b/_includes/top.html
@@ -13,21 +13,63 @@
     </div>
     <div id="main-navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li id="nav-slipstream"><a href="/products/slipstream.html">SlipStream</a><span></span></li>
-        <li id="nav-nuvlabox"><a href="/products/nuvlabox.html">NuvlaBox</a><span></span></li>
-        <li id="nav-jobs"><a href="/jobs/index.html">Jobs</a><span></span></li>
-        <li id="nav-personae"><a href="/personae/index.html">Our Users</a><span></span></li>
-        <li id="nav-customers"><a href="/customers/index.html">Customers</a><span></span></li>
+        <li id="nav-slipstream" class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="/products/slipstream.html"><b>SlipStream&reg;</b>: Multi-cloud management platform</a></li>
+            <li><a href="/products/nuvlabox.html"><b>NuvlaBox&reg;</b>: Cloud-in-a-box appliance</a></li>
+          </ul>
+          <span></span>
+        </li>
+        <li id="nav-usecases" class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Use Cases <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="/products/slipstream-usecases.html#Enterprise-App-Store-/-Self-Service-IT">Deploy your own <b>Enterprise App Store / Self-Service IT</b></a></li>
+            <li><a href="/products/slipstream-usecases.html#Hybrid-Cloud-Provisioning"><b>Hybrid Cloud</b> without the headache</a></li>
+            <li><a href="/products/slipstream-usecases.html#LAMP-and-complex-application-provisioning">Deploy <b>complex apps</b> in any cloud in a snap</a></li>
+            <li><a href="/products/nuvlabox-usecases.html#Schools-or-Federation-of-Schools">Cloud appliance</b> to support <b>eLearning in emerging regions</b></a></li>
+            <li><a href="/products/nuvlabox-usecases.html#Field-Operations-with-Agile-Local-Infrastructure"><b>Turn-key field operation</b> infrastructure</a></li>
+          </ul>
+          <span></span>
+        </li>
+        <li id="nav-benefits" class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Benefits <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="/eguides/#msp-eguide"><b>MSP</b>: Increase margins with application deployment automation</a></li>
+            <li><a href="/eguides/#var-eguide"><b>VAR</b>: Coordinates the configuration of individual services</a></li>
+            <li><a href="/eguides/#iaas-eguide"><b>IaaS provider</b>: Increase service value and margins</a></li>
+          </ul>
+          <span></span>
+        </li>
+        <li id="nav-personae" class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Our Users <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="/personae/index.html"><b>Meet our users</b></a></li>
+            <li><a href="/personae/index.html#Alice"><b>App Store user</b>: Alice</a></li>
+            <li><a href="/personae/index.html#Bob"><b>CIO, Team Leader and/or account manager</b>: Bob</a></li>
+            <li><a href="/personae/index.html#Clara"><b>DevOps engineer</b>: Clara</a></li>
+            <li><a href="/personae/index.html#Dave"><b>SlipStream administrator</b>: Dave</a></li>
+          </ul>
+          <span></span>
+        </li>
+        <li><a href="http://media.sixsq.com/blog">Blog</a><span></span></li>
         <li><a href="http://support.sixsq.com">Support</a><span></span></li>
-        <li id="nav-about"><a href="/about-us.html">About Us</a><span></span></li>
-        <li id="nav-contact"><a href="/contact.html">Contact</a><span></span></li>
+        <li id="nav-jobs"><a href="/jobs/index.html">Jobs</a><span></span></li>
+        <li id="nav-customers"><a href="/customers/index.html">Customers</a><span></span></li>
+        <li id="nav-about" class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="/about-us.html">About Us</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+          </ul>
+          <span></span>
+        </li>
         <li id="nav-media" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Media <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="/news">News</a></li>
-            <li><a href="/blog">Blog</a></li>
             <li><a href="/videos">Videos</a></li>
-            <li><a href="/whitepapers">White Papers</a></li>
+            <li><a href="/eguides">eGuides</a></li>
           </ul>
           <span></span>
         </li>
