--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -13,10 +13,10 @@
           <div class="jumbotron">
 
             <div class="container">
-              <h1>Application Deployment in any Cloud</h1>
-              <h2>1-click multi-cloud application deployment platform. Real multi-cloud software solution built on professional open source software.</h2>
-              <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStram overview" max-width="900px" style="padding: 35px 0 15px 0;"/></p>
-              <p/><p><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream.html">Learn more &raquo;</a></p>
+              <h1>Multi-Cloud Management Platform</h1>
+              <h2>Deploy Any App in Any Cloud with SlipStream&reg;</h2>
+              <p/><p/><p><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream.html">Learn more &raquo;</a></p>
+              <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStram overview" max-width="100px" width="800" style="padding: 35px 0 15px 0;"/></p>
             </div>
 
             <div class="container">
@@ -37,11 +37,11 @@
             </div>
             <div class="container spacy">
               <h1>All Clouds Supported</h1>
-              <h2>We support all mainstream clouds.</h2>
+              <h2>We support all mainstream clouds</h2>
               <p align="center">
                 <img src="/img/content/cloud_providers_color_on_transparent_1000px.png" alt="SlipStream Supported Clouds" />
               </p>
-              <h3>And if we are missing the one you need, get in touch... chances are it is already on its way.</h3>
+              <h3>Can't find your cloud? Get in touch... chances are we're already working on it.</h3>
               <p style="padding-top: 30px;"><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream.html">Learn more &raquo;</a></p>
             </div> <!-- /container -->
 
