--- a/_includes/whats_next.html
+++ b/_includes/whats_next.html
@@ -1,10 +1,10 @@
 <div style="color: white; background-color: #9B9B9B;">
-  <div class="container big spacy">
+  <div class="container spacy">
     <h1>What's next?</h1>
     <p>
 Interested and want to know more? We'd be pleased to provide you with further information. Get in touch.
     </p>
-    <button id="contact-button" class="btn btn-primary btn-lg center-block">
+    <button onclick="window.location.href='/contact.html#contact-us-form'" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#contact-modal">
       Contact us &raquo;
     </button>
   </div>
