--- a/css/navbar.css
+++ b/css/navbar.css
@@ -18,7 +18,7 @@
   font-weight: bold;
 }
 
-.navbar-nav li.active span {
+.navbar-nav li.active > span {
 	display: block;
 	position: absolute;
 	left: 50%;
