--- a/_includes/top.html
+++ b/_includes/top.html
@@ -13,11 +13,19 @@
     </div>
     <div id="main-navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li id="nav-slipstream" class="dropdown">
+        <li id="nav-products" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="/products/slipstream.html"><b>SlipStream&reg;</b>: Multi-cloud management platform</a></li>
             <li><a href="/products/nuvlabox.html"><b>NuvlaBox&reg;</b>: Cloud-in-a-box appliance</a></li>
+          </ul>
+          <span></span>
+        </li>
+        <li id="nav-services" class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="http://slipstream.sixsq.com"><b>SlipStream&reg; SaaS</b>: managed by SixSq</a></li>
+            <li><a href="http://hnx.helix-nebula.eu"><b>Helix Nebula Marketplace</b>: Big science in the cloud</a></li>
           </ul>
           <span></span>
         </li>
@@ -26,7 +34,7 @@
           <ul class="dropdown-menu" role="menu">
             <li><a href="/products/slipstream-usecases.html#Enterprise-App-Store-/-Self-Service-IT">Deploy your own <b>Enterprise App Store / Self-Service IT</b></a></li>
             <li><a href="/products/slipstream-usecases.html#Hybrid-Cloud-Provisioning"><b>Hybrid Cloud</b> without the headache</a></li>
-            <li><a href="/products/slipstream-usecases.html#LAMP-and-complex-application-provisioning">Deploy <b>complex apps</b> in any cloud in a snap</a></li>
+            <li><a href="/products/slipstream-usecases.html#LAMP-and-complex-application-provisioning"><b>Deploy complex apps</b> in any cloud in a snap</a></li>
             <li><a href="/products/nuvlabox-usecases.html#Schools-or-Federation-of-Schools">Cloud appliance</b> to support <b>eLearning in emerging regions</b></a></li>
             <li><a href="/products/nuvlabox-usecases.html#Field-Operations-with-Agile-Local-Infrastructure"><b>Turn-key field operation</b> infrastructure</a></li>
           </ul>
@@ -35,9 +43,11 @@
         <li id="nav-benefits" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Benefits <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/eguides/#msp-eguide"><b>MSP</b>: Increase margins with application deployment automation</a></li>
-            <li><a href="/eguides/#var-eguide"><b>VAR</b>: Coordinates the configuration of individual services</a></li>
-            <li><a href="/eguides/#iaas-eguide"><b>IaaS provider</b>: Increase service value and margins</a></li>
+            <li><a href="http://media.sixsq.com/how-can-managed-service-providers-benefit-from-automation"><b>MSP</b>: Increase margins with application deployment automation</a></li>
+            <li><a href="http://media.sixsq.com/how-can-vars-benefit-from-application-deployment-automation"><b>VAR</b>: Coordinates the configuration of individual services</a></li>
+            <li><a href="http://media.sixsq.com/how-can-iaas-providers-benefit-from-application-deployment-automation"><b>IaaS provider</b>: Increase service value and margins</a></li>
+            <li><a href="http://media.sixsq.com/how-helix-nebula-marketplace-delivers-cloud-to-big-science"><b>Big science organisation</b>: access to large scale federated cloud</a></li>
+            <li><a href="http://media.sixsq.com/how-to-bridge-the-digital-divide"><b>IT provider in emerging economies</b>: connectivity &amp; affordability in rural communities</a></li>
           </ul>
           <span></span>
         </li>
@@ -53,14 +63,14 @@
           <span></span>
         </li>
         <li><a href="http://media.sixsq.com/blog">Blog</a><span></span></li>
-        <li><a href="http://support.sixsq.com">Support</a><span></span></li>
-        <li id="nav-jobs"><a href="/jobs/index.html">Jobs</a><span></span></li>
-        <li id="nav-customers"><a href="/customers/index.html">Customers</a><span></span></li>
         <li id="nav-about" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="/about-us.html">About Us</a></li>
             <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/customers/index.html">Customers</a><span></span></li>
+            <li><a href="/jobs/index.html">Jobs</a><span></span></li>
+            <li><a href="http://support.sixsq.com">Support</a><span></span></li>
           </ul>
           <span></span>
         </li>
