--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,7 +32,7 @@
           <div class="contact_us col-md-4">
             <div>Need information? Give feedback?<br/>Get in touch.</div>
             <div><a href="/contact.html#contact-us-form">Fill form</a></div>
-            <div>info: +41 77 44 68 170<br>support: +41 22 57 52 229</div>
+            <div>info/support: +41 22 54 41 733</div>
             <div>
               <a href="mailto:info@sixsq.com">info@sixsq.com</a>
               <br/>
