--- a/_includes/slipstream_intro.html
+++ b/_includes/slipstream_intro.html
@@ -6,6 +6,6 @@
 <div class="jumbotron top_product slipstream">
   <div class="container">
     <h1>SlipStream</h1>
-    <p>1-click multi-cloud application deployment platform. Real multi-cloud software solution built on professional open source software.</p>
+    <p>Multi-cloud management platform.</p>
   </div>
 </div>
