Further SlipStream slogan update

--- a/_includes/slipstream_intro.html
+++ b/_includes/slipstream_intro.html
@@ -6,6 +6,6 @@
 <div class="jumbotron top_product slipstream">
   <div class="container">
     <h1>SlipStream</h1>
-    <p>Multi-cloud management platform.</p>
+    <p>Multi-cloud management platform. Deploy any app in any cloud.</p>
   </div>
 </div>
