--- a/_includes/top.html
+++ b/_includes/top.html
@@ -63,6 +63,7 @@
           <span></span>
         </li>
         <li><a href="http://media.sixsq.com/blog">Blog</a><span></span></li>
+<!--        <li><a href="/r-and-d">R&amp;D</a><span></span></li> -->
         <li id="nav-about" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
