--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -8,6 +8,7 @@
   <div class="jumbotron">
     <div class="container">
       <h1>{{ page.title }}</h1>
+      {{ page.content | markdownify }}
     </div>
   </div>
   {% for post in site.posts %}
