--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -3,11 +3,23 @@
   {% include head.html %}
   <body>
     {% include top.html %}
-    {% include media_nav.html %}
-
+    {% if page.category == "r-and-d" %}
+      {% include r-and-d.html %}
+    {% else %}
+      {% include media_nav.html %}
+    {% endif %}
     <div class="jumbotron">
       <div class="container">
-        <h1 class="list_title">{{ page.title }}</h1>
+        <div class="row">
+          <div class="col-md-8">
+            <h1 class="list_title">{{ page.title }}
+          </div>
+          <div class="col-md-4">
+            {% if page.image %}
+              <img style="max-height: 5em;" src="{{ page.image }}" />
+            {% endif %}
+          </div>
+        </div>
         {% if page.category == "news" %}
         <div class="date">{{ page.date | date: "%d %B %Y" }}</div>
         {% endif %}
