Add new SlipStream unified documentation website link

--- a/_includes/slipstream_nav.html
+++ b/_includes/slipstream_nav.html
@@ -14,6 +14,7 @@
         <li id="sub_usecases"><a href="/products/slipstream-usecases.html">Use Cases</a></li>
         <li id="sub_features"><a href="/products/slipstream-features.html">Features</a></li>
         <li id="sub_techspecs"><a href="/products/slipstream-tech.html">Tech Specs</a></li>
+        <li id="sub_doc"><a href="http://ssdocs.sixsq.com">Documentation</a></li>
         <li id="tryme_techspecs"><a href="/products/slipstream-tryme.html">Try Me</a></li>
       </ul>
     </div>
