Improve image placement for R&D page

--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -22,7 +22,7 @@
         {% if post.image %}
         <center>
         <a href="{{ post.url }}">
-          <img src="{{ post.image }}" />
+          <img style="max-height: 10em;" src="{{ post.image }}" />
         </a>
         <p/>
         </center>
