--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -12,11 +12,16 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8">
-            <h1 class="list_title">{{ page.title }}
+            <h1 class="list_title">{{ page.title }}</h1>
+            <a class="twitter-share-button"
+              href="https://twitter.com/share"
+              data-via="sixsq">
+              Tweet
+            </a>
           </div>
           <div class="col-md-4">
             {% if page.image %}
-              <img style="max-height: 5em;" src="{{ page.image }}" />
+              <img style="max-height: 10em;" src="{{ page.image }}" />
             {% endif %}
           </div>
         </div>
@@ -27,11 +32,6 @@
         <div class="date">{{ page.date | date: "%d %B %Y" }} - by {{ page.author }}</div>
         {% endif %}
         <p/>
-        <a class="twitter-share-button"
-          href="https://twitter.com/share"
-          data-via="sixsq">
-        Tweet
-        </a>
       </div>
     </div>
     
