--- a/_includes/slipstream_intro.html
+++ b/_includes/slipstream_intro.html
@@ -7,6 +7,6 @@
   <div class="container">
     <h1>SlipStream</h1>
     <p>Multi-cloud management platform. Deploy any app in any cloud.</p>
-		<p>Sign Up for SlipStream Training Event!</p><a href="http://www.eventbrite.com/e/slipstream-training-hands-on-use-of-a-cloud-management-platform-tickets-16393996886?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=16393996886" alt="Eventbrite - SlipStream Training: hands on use of a cloud management platform" /></a>
+<!--		<p>Sign Up for SlipStream Training Event!</p><a href="http://www.eventbrite.com/e/slipstream-training-hands-on-use-of-a-cloud-management-platform-tickets-16393996886?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=16393996886" alt="Eventbrite - SlipStream Training: hands on use of a cloud management platform" /></a> -->
   </div>
 </div>
