--- a/_includes/slipstream_nav.html
+++ b/_includes/slipstream_nav.html
@@ -10,12 +10,12 @@
     </div>
     <div id="sub-navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li id="sub_overview"><a href="/products/slipstream.html">Overview</a></li>
-        <li id="sub_usecases"><a href="/products/slipstream-usecases.html">Use Cases</a></li>
-        <li id="sub_features"><a href="/products/slipstream-features.html">Features</a></li>
-        <li id="sub_techspecs"><a href="/products/slipstream-tech.html">Tech Specs</a></li>
+        <li id="sub_overview"><a href="/products/slipstream/slipstream.html">Overview</a></li>
+        <li id="sub_usecases"><a href="/products/slipstream/slipstream-usecases.html">Use Cases</a></li>
+        <li id="sub_features"><a href="/products/slipstream/slipstream-features.html">Features</a></li>
+        <li id="sub_techspecs"><a href="/products/slipstream/slipstream-tech.html">Tech Specs</a></li>
         <li id="sub_doc"><a href="http://ssdocs.sixsq.com">Documentation</a></li>
-        <li id="tryme_techspecs"><a href="/products/slipstream-tryme.html">Try Me</a></li>
+        <li id="tryme_techspecs"><a href="/products/slipstream/slipstream-tryme.html">Try Me</a></li>
       </ul>
     </div>
   </div>
