--- a/_includes/top.html
+++ b/_includes/top.html
@@ -16,8 +16,8 @@
         <li id="nav-products" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/products/slipstream.html"><b>SlipStream&reg;</b>: Multi-cloud management platform</a></li>
-            <li><a href="/products/nuvlabox.html"><b>NuvlaBox&reg;</b>: Cloud-in-a-box appliance</a></li>
+            <li><a href="/products/slipstream/slipstream.html"><b>SlipStream&reg;</b>: Multi-cloud management platform</a></li>
+            <li><a href="/products/nuvlabox/nuvlabox.html"><b>NuvlaBox&reg;</b>: Cloud-in-a-box appliance</a></li>
           </ul>
           <span></span>
         </li>
@@ -32,11 +32,11 @@
         <li id="nav-usecases" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Use Cases <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/products/slipstream-usecases.html#Enterprise-App-Store-/-Self-Service-IT">Deploy your own <b>Enterprise App Store / Self-Service IT</b></a></li>
-            <li><a href="/products/slipstream-usecases.html#Hybrid-Cloud-Provisioning"><b>Hybrid Cloud</b> without the headache</a></li>
-            <li><a href="/products/slipstream-usecases.html#LAMP-and-complex-application-provisioning"><b>Deploy complex apps</b> in any cloud in a snap</a></li>
-            <li><a href="/products/nuvlabox-usecases.html#Schools-or-Federation-of-Schools">Cloud appliance</b> to support <b>eLearning in emerging regions</b></a></li>
-            <li><a href="/products/nuvlabox-usecases.html#Field-Operations-with-Agile-Local-Infrastructure"><b>Turn-key field operation</b> infrastructure</a></li>
+            <li><a href="/products/slipstream/slipstream-usecases.html#Enterprise-App-Store-/-Self-Service-IT">Deploy your own <b>Enterprise App Store / Self-Service IT</b></a></li>
+            <li><a href="/products/slipstream/slipstream-usecases.html#Hybrid-Cloud-Provisioning"><b>Hybrid Cloud</b> without the headache</a></li>
+            <li><a href="/products/slipstream/slipstream-usecases.html#LAMP-and-complex-application-provisioning"><b>Deploy complex apps</b> in any cloud in a snap</a></li>
+            <li><a href="/products/nuvlabox/nuvlabox-usecases.html#Schools-or-Federation-of-Schools">Cloud appliance</b> to support <b>eLearning in emerging regions</b></a></li>
+            <li><a href="/products/nuvlabox/nuvlabox-usecases.html#Field-Operations-with-Agile-Local-Infrastructure"><b>Turn-key field operation</b> infrastructure</a></li>
           </ul>
           <span></span>
         </li>
@@ -51,7 +51,7 @@
           </ul>
           <span></span>
         </li>
-        <li id="nav-personae" class="dropdown">
+        <li id="nav-personae" class="dropdown hidden-sm">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Our Users <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="/personae/index.html"><b>Meet our users</b></a></li>
@@ -63,7 +63,8 @@
           <span></span>
         </li>
         <li><a href="http://media.sixsq.com/blog">Blog</a><span></span></li>
-        <li><a href="/r-and-d">R&amp;D</a><span></span></li>
+        <li><a href="http://support.sixsq.com">FAQ</a><span></span></li>
+        <li class="hidden-sm"><a href="/r-and-d">R&amp;D</a><span></span></li>
         <li id="nav-about" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
