--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -7,76 +7,170 @@
 
         {% include top.html %}
 
-          <div class="banner hidden-xs"><div><a href="/jobs/index.html">We're hiring!</a></div></div>
 
-            <!-- Main jumbotron for a primary marketing message or call to action -->
-          <div class="jumbotron">
-
-            <div class="container">
-              <h1>Multi-Cloud Management Platform</h1>
-              <h2>Deploy Any App in Any Cloud with SlipStream&reg;</h2>
-              <p/><p/><p><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream.html">Learn more &raquo;</a></p>
-              <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStram overview" max-width="100px" width="800" style="padding: 35px 0 15px 0;"/></p>
-            </div>
-
-            <div class="container">
-              <div class="row">
-                <div class="col-md-4">
-                  <h2>Enterprise App Store / Self-Service IT</h2>
-                  <p><a class="btn btn-default" href="/products/slipstream-usecases.html#Enterprise-App-Store-/-Self-Service-IT" role="button">Use case details &raquo;</a></p>
-                </div>
-                <div class="col-md-4">
-                  <h2>Hybrid Cloud Provisioning</h2>
-                  <p><a class="btn btn-default" href="/products/slipstream-usecases.html#Hybrid-Cloud-Provisioning" role="button">Use case details &raquo;</a></p>
-                </div>
-                <div class="col-md-4">
-                  <h2>LAMP and complex application provisioning</h2>
-                  <p><a class="btn btn-default" href="/products/slipstream-usecases.html#LAMP-and-complex-application-provisioning" role="button">Use case details &raquo;</a></p>
-                </div>
+    <div class="banner hidden-xs">
+      <div>
+        <a href="/jobs/index.html">We're hiring!</a>
+      </div>
+    </div>
+    <div class="jumbotron">
+      <div class="container">
+        <h1>SlipStream&reg;: Application Deployment Platform</h1>
+        <h2>Affordable, multi-cloud application management platform, built on open source professional software, for the enterprise, with love.</h2>
+        <div class="row row-summary-slipstream">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <div>
+              <div>
+                <h1>
+                  <center>
+                    <span class="glyphicon glyphicon-cloud"></span>
+                    <span style="color: gray">+</span>
+                    <span style="color: white" class="glyphicon glyphicon-flash"></span>
+                  </center>
+                </h1>
+                <h2>Platform as a Service (Paas)</h2>
+                <ul>
+                  <li>Take full advantage of the cloud, avoiding cloud provider and technology lock-in</li>
+                  <li>Automate application deployment for your team, your organisation or your customers</li>
+                  <li>Your own self-service IT platform or Enterprise App Store</li>
+                </ul>
               </div>
+              <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/slipstream.html">Learn more &raquo;</a>
             </div>
-            <div class="container spacy">
-              <h1>All Clouds Supported</h1>
-              <h2>We support all mainstream clouds</h2>
-              <p align="center">
-                <img src="/img/content/cloud_providers_color_on_transparent_1000px.png" alt="SlipStream Supported Clouds" />
-              </p>
-              <h3>Can't find your cloud? Get in touch... chances are we're already working on it.</h3>
-              <p style="padding-top: 30px;"><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream.html">Learn more &raquo;</a></p>
-            </div> <!-- /container -->
-
-          </div> <!-- /jumbotron -->
-
-          <div class="jumbotron main-story nuvlabox">
-            <div class="container">
-              <h1>Bridging the digital divide</h1>
-              <h2>with an affordable cloud-in-a-box that's child's play to use and manage</h2>
-              <p align="center"><img src="/img/content/nuvlabox-overview.png" alt="SlipStram overview" /></p>
-              <p><a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox.html">Learn more &raquo;</a></p>
-            </div>
-
-            <div class="container">
-              <div class="row">
-                <div class="col-md-4">
-                  <h2>Schools or Federation of Schools</h2>
-                  <p><a class="btn btn-default" href="/products/nuvlabox-usecases.html#Schools-or-Federation-of-Schools" role="button">Use case details &raquo;</a></p>
-                </div>
-                <div class="col-md-4">
-                  <h2>Putting Intelligence at the Edge of the Network</h2>
-                  <p><a class="btn btn-default" href="/products/nuvlabox-usecases.html#Putting-Intelligence-at-the-Edge-of-the-Network" role="button">Use case details &raquo;</a></p>
-               </div>
-                <div class="col-md-4">
-                  <h2>Field Operations with Agile Local Infrastructure</h2>
-                  <p><a class="btn btn-default" href="/products/nuvlabox-usecases.html#Field-Operations-with-Agile-Local-Infrastructure" role="button">Use case details &raquo;</a></p>
-                </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <div>
+              <div>
+                <h1>
+                  <center>
+                    <span class="glyphicon glyphicon-cloud"></span>
+                    <span style="color: gray">+</span>
+                    <span style="color: white" class="glyphicon glyphicon-sunglasses"></span>
+                  </center>
+                </h1>
+                <h2>DevOps platform</h2>
+                <ul>
+                  <li>Increase your development and deployment velocity and quality</li>
+                  <li>Integrate cloud deployment right at the heart of your development process</li>
+                  <li>Add full app deployment to your continuous integration system</li>
+                </ul>
               </div>
-            </div> <!-- /container -->
-          </div> <!-- /container -->
+              <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/slipstream-usecases.html#DevOps-platform">Learn more &raquo;</a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <div>
+              <div>
+                <h1>
+                  <center>
+                    <span class="glyphicon glyphicon-cloud"></span>
+                    <span style="color: gray">+</span>
+                    <span style="color: white" class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
+                  </center>
+                </h1>
+                <h2>Hybrid cloud manager</h2>
+                <ul>
+                  <li>Eliminate shadow-IT and reclaim infrastructure control</li>
+                  <li>Take advantage of the public cloud without compromising on security with sound governance</li>
+                  <li>Use private and public cloud together to reduce costs and increase elasticity</li>
+                </ul>
+              </div>
+              <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/slipstream-usecases.html#Hybrid-Cloud-Provisioning">Learn more &raquo;</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-        {% include front_personae.html %}
-			  {% include whats_next.html %}
-        
-        {% include footer.html %}
+    <div class="jumbotron main-story nuvlabox">
+      <div class="container">
+        <h1>NuvlaBox&reg;: Cloud in a box appliance</h1>
+        <h2>All the power of the cloud packaged in a simple, small and secure device.</h2>
+        <div class="row row-summary-nuvlabox">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <div>
+              <div>
+                <h1>
+                  <center>
+                    <span class="glyphicon glyphicon-hdd"></span>
+                    <span style="color: gray">+</span>
+                    <span style="color: white" class="glyphicon glyphicon-globe" aria-hidden="true"></span>
+                  </center>
+                </h1>
+                <h2>Remote control a swarm of NuvlaBox from a single pane of glass</h2>
+                <ul>
+                  <li>No need for expert hands in the field</li>
+                  <li>Setups in seconds, runs forever</li>
+                  <li>Deliver apps and content to your boxes using a number of IP links (e.g. land, satellites, air)</li>
+                </ul>
+              </div>
+              <a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/nuvlabox.html">Learn more &raquo;</a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <div>
+              <div>
+                <h1>
+                  <center>
+                    <span class="glyphicon glyphicon-hdd"></span>
+                    <span style="color: gray">+</span>
+                    <span style="color: white" class="glyphicon glyphicon-grain" aria-hidden="true"></span>
+                  </center>
+                </h1>
+                <h2>Ready for tough field operations</h2>
+                <ul>
+                  <li>Ideal to quickly setup lightweight field or outpost IT operations, with ruggedised transport casing</li>
+                  <li>Establish its own secure Wi-Fi to connect wide range of devices</li>
+                  <li>Fanless design providing no moving parts increasing robustness and operation  lifespan</li>
+                </ul>
+              </div>
+              <a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/nuvlabox-usecases.html#Field-Operations-with-Agile-Local-Infrastructure">Learn more &raquo;</a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <div>
+              <div>
+                <h1>
+                  <center>
+                    <span class="glyphicon glyphicon-cloud"></span>
+                    <span style="color: gray">+</span>
+                    <span style="color: white" class="glyphicon glyphicon-th" aria-hidden="true"></span>
+                  </center>
+                </h1>
+                <h2>Provision the right apps at the right time</h2>
+                <ul>
+                  <li>Point and click application deployment support</li>
+                  <li>Cache application locally, reducing dependency on network availability</li>
+                  <li>Deliver apps and content to your boxes using a number of IP links (e.g. land, satellites, air)</li>
+                </ul>
+              </div>
+              <a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/nuvlabox-features.html">Learn more &raquo;</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <div class="jumbotron main-story">
+      <div class="container spacy">
+        <h1>All Clouds Supported</h1>
+        <div class="row row-summary-nuvlabox">
+          <div class="col-md-6">
+            <p align="center">
+              <img src="/img/content/cloud_providers_color_on_transparent_1000px.png" alt="SlipStream Supported Clouds" />
+            </p>
+          </div>
+          <div class="col-md-6">
+            <h2>We support all mainstream clouds</h2>
+            <h3>Can't find your cloud? Get in touch... chances are we're already working on it.</h3>
+            <p style="padding-top: 30px;"><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/slipstream-features.html">Learn more &raquo;</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+	  {% include whats_next.html %}        
+    {% include footer.html %}
 
   </body>
 </html>
