White background with red border. Buttons centered.

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -25,7 +25,7 @@
                   <center>
                     <span class="glyphicon glyphicon-cloud"></span>
                     <span style="color: gray">+</span>
-                    <span style="color: white" class="glyphicon glyphicon-flash"></span>
+                    <span style="color: #CF2121" class="glyphicon glyphicon-flash"></span>
                   </center>
                 </h1>
                 <h2>Platform as a Service (Paas)</h2>
@@ -35,7 +35,7 @@
                   <li>Your own self-service IT platform or Enterprise App Store</li>
                 </ul>
               </div>
-              <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/slipstream.html">Learn more &raquo;</a>
+              <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/slipstream.html">Learn more &raquo;</a></center>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -45,7 +45,7 @@
                   <center>
                     <span class="glyphicon glyphicon-cloud"></span>
                     <span style="color: gray">+</span>
-                    <span style="color: white" class="glyphicon glyphicon-sunglasses"></span>
+                    <span style="color: #CF2121" class="glyphicon glyphicon-sunglasses"></span>
                   </center>
                 </h1>
                 <h2>DevOps platform</h2>
@@ -55,7 +55,7 @@
                   <li>Add full app deployment to your continuous integration system</li>
                 </ul>
               </div>
-              <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/slipstream-usecases.html#DevOps-platform">Learn more &raquo;</a>
+              <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/slipstream-usecases.html#DevOps-platform">Learn more &raquo;</a></center>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -65,7 +65,7 @@
                   <center>
                     <span class="glyphicon glyphicon-cloud"></span>
                     <span style="color: gray">+</span>
-                    <span style="color: white" class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
+                    <span style="color: #CF2121" class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
                   </center>
                 </h1>
                 <h2>Hybrid cloud manager</h2>
@@ -75,7 +75,7 @@
                   <li>Use private and public cloud together to reduce costs and increase elasticity</li>
                 </ul>
               </div>
-              <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/slipstream-usecases.html#Hybrid-Cloud-Provisioning">Learn more &raquo;</a>
+              <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/slipstream-usecases.html#Hybrid-Cloud-Provisioning">Learn more &raquo;</a></center>
             </div>
           </div>
         </div>
@@ -94,7 +94,7 @@
                   <center>
                     <span class="glyphicon glyphicon-hdd"></span>
                     <span style="color: gray">+</span>
-                    <span style="color: white" class="glyphicon glyphicon-globe" aria-hidden="true"></span>
+                    <span style="color: #CF2121" class="glyphicon glyphicon-globe" aria-hidden="true"></span>
                   </center>
                 </h1>
                 <h2>Remote control a swarm of NuvlaBox from a single pane of glass</h2>
@@ -104,7 +104,7 @@
                   <li>Deliver apps and content to your boxes using a number of IP links (e.g. land, satellites, air)</li>
                 </ul>
               </div>
-              <a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/nuvlabox.html">Learn more &raquo;</a>
+              <center><a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/nuvlabox.html">Learn more &raquo;</a></center>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -114,7 +114,7 @@
                   <center>
                     <span class="glyphicon glyphicon-hdd"></span>
                     <span style="color: gray">+</span>
-                    <span style="color: white" class="glyphicon glyphicon-grain" aria-hidden="true"></span>
+                    <span style="color: #CF2121" class="glyphicon glyphicon-grain" aria-hidden="true"></span>
                   </center>
                 </h1>
                 <h2>Ready for tough field operations</h2>
@@ -124,7 +124,7 @@
                   <li>Fanless design providing no moving parts increasing robustness and operation  lifespan</li>
                 </ul>
               </div>
-              <a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/nuvlabox-usecases.html#Field-Operations-with-Agile-Local-Infrastructure">Learn more &raquo;</a>
+              <center><a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/nuvlabox-usecases.html#Field-Operations-with-Agile-Local-Infrastructure">Learn more &raquo;</a></center>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -134,7 +134,7 @@
                   <center>
                     <span class="glyphicon glyphicon-cloud"></span>
                     <span style="color: gray">+</span>
-                    <span style="color: white" class="glyphicon glyphicon-th" aria-hidden="true"></span>
+                    <span style="color: #CF2121" class="glyphicon glyphicon-th" aria-hidden="true"></span>
                   </center>
                 </h1>
                 <h2>Provision the right apps at the right time</h2>
@@ -144,7 +144,7 @@
                   <li>Deliver apps and content to your boxes using a number of IP links (e.g. land, satellites, air)</li>
                 </ul>
               </div>
-              <a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/nuvlabox-features.html">Learn more &raquo;</a>
+              <center><a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/nuvlabox-features.html">Learn more &raquo;</a></center>
             </div>
           </div>
         </div>
